# code-extractor

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  README.md  README_ENHANCED.md  SECURITY.md  WARP.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  session_data.json  setup.py
.claude/: EXECUTION_REPORT.md  index.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
.windsurf/workflows/: commit.md
configs/: config.example.toml  workspace.example.toml
docs/: advanced-features.md  advanced-indexing-guide.md  api-reference.md  architecture.md  cli-reference.md  configuration.md  enhanced-indexing-guide.md  faq.md  graphrag_guide.md  index.md  installation.md  maintenance.md  mcp-api.md  mcp-overview.md  mcp-server-guide.md  mcp-tutorial.md  roadmap.md  style-guide.md  troubleshooting.md  usage.md
docs/advanced/: architecture.md  features.md  indexing-architecture.md  indexing-guide.md
docs/api/: config.md  error-handling.md  error_handling.md  file-watcher.md  file_watcher.md  formatter.md  history.md  index.md  indexer.md  language-detection.md  language_detection.md  matchers.md  multi-repo.md  multi_repo.md  pysearch.md  scorer.md  semantic.md  types.md  utils.md
docs/development/: roadmap.md  style-guide.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cli-reference.md  configuration.md  performance.md  usage.md
docs/help/: faq.md  troubleshooting.md
docs/mcp/: advanced.md  index.md  server-guide.md  tutorial.md
docs/templates/: README.md  api-reference-template.md  tutorial-template.md  user-guide-template.md
examples/: 01_basic_search.py  02_ast_search.py  03_fuzzy_search.py  04_boolean_search.py  05_semantic_search.py  06_dependency_analysis.py  07_history_and_bookmarks.py  08_caching_and_performance.py  09_file_watching.py  10_workspace_and_multi_repo.py  11_ide_integration.py  12_error_handling_and_logging.py  README.md  advanced_examples.py  advanced_indexing_demo.py  basic_usage.py  cache_and_watch.py  cli_examples.sh  edge_cases.py  enhanced_indexing_demo.py  graphrag_configuration.py  graphrag_examples.py  mcp_server_example.py  use_cases.py
examples/tutorials/: 01_getting_started.py  05_search_types.py  README.md
mcp/: CLAUDE.md  README.md  __init__.py  mcp_config.json
mcp/servers/: __init__.py  basic_mcp_server.py  engine.py  fastmcp_server.py  mcp_server.py  pysearch_mcp_server.py  resources.py
mcp/shared/: __init__.py  composition.py  progress.py  prompts.py  resource_manager.py  resources.py  session_manager.py  validation.py
scripts/: build-docs.sh  dev-install.sh  docs-dev.sh  format.sh  lint.sh  run-mcp-server.sh  tasks.py  test.sh  validate-project.sh
site/: 404.html  index.html  sitemap.xml
site/api-reference/: index.html
site/architecture/: index.html
site/cli-reference/: index.html
site/configuration/: index.html
site/faq/: index.html
site/installation/: index.html
site/mcp-advanced/: index.html
site/mcp-api/: index.html
site/mcp-overview/: index.html
site/mcp-tutorial/: index.html
site/performance/: index.html
site/roadmap/: index.html
site/search/: search_index.json
site/style-guide/: index.html
site/troubleshooting/: index.html
site/usage/: index.html
src/pysearch/: __init__.py  api.py  cache_manager.py  cli.py  config.py  dependency_analysis.py  enhanced_error_handling.py  enhanced_indexer.py  error_handling.py  formatter.py  history.py  ide_hooks.py  indexer.py  indexer_metadata.py  language_detection.py  languages.py  matchers.py  metadata_filters.py  py.typed  scorer.py  semantic.py  semantic_advanced.py  types.py  utils.py
test_data/sample_repo/: Makefile  README.md  pyproject.toml  requirements.txt
test_data/sample_repo/scripts/: seed_data.py
test_data/sample_repo/src/: __init__.py  app.py  config.py
test_data/sample_repo/src/api/: __init__.py  middleware.py  routes.py  validators.py
test_data/sample_repo/src/db/: __init__.py  connection.py  migrations.py
test_data/sample_repo/src/models/: __init__.py  base.py  post.py  user.py
test_data/sample_repo/src/services/: __init__.py  auth.py  post_service.py  user_service.py
test_data/sample_repo/src/utils/: __init__.py  cache.py  helpers.py  logger.py
test_data/sample_repo/tests/: __init__.py  conftest.py  test_models.py  test_services.py
test_data/sample_repo/web/: app.js  styles.css  types.ts
tests/: conftest.py  test_api_ast_decorators_and_json.py  test_api_ast_metadata_semantic.py  test_api_comprehensive.py  test_api_convenience_output_regex.py  test_api_dependencies.py  test_api_expanded.py  test_api_metadata_filters_and_errors.py  test_api_min.py  test_api_regex_error_handling.py  test_api_toggles_and_semantic.py  test_benchmarks.py  test_cache_manager.py  test_cache_manager_disk_cleanup.py  test_cache_manager_disk_index.py  test_cache_manager_eviction.py  test_circular_detector.py  test_cli.py  test_cli_comprehensive.py  test_dependency_analysis.py  test_enhanced_fuzzy.py  test_enhanced_indexing.py  test_enhanced_mcp_server.py  test_error_handling_expanded.py  test_file_watcher_batching.py  test_file_watcher_duplicate_and_filters.py  test_file_watcher_handler_min.py  test_file_watcher_manager_errors.py  test_file_watcher_manager_min.py  test_file_watcher_min.py  test_formatter.py  test_fuzzy_advanced.py  test_fuzzy_comprehensive.py  test_graphrag.py  test_history_advanced.py  test_history_min.py  test_ide_hooks.py  test_indexer_expanded.py  test_indexer_metadata.py  test_indexer_strict_vs_lazy.py  (+26 more)
tests/test_mcp/: test_engine.py  (+6 more)
tools/: __init__.py  simple_hello.py
(+271 files in other folders)
