[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysearch"
version = "0.1.0"
description = "A fast, context-aware search engine for Python codebases with regex, AST and semantic search."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Kilo Code" }
]
keywords = ["search", "python", "code", "ast", "regex", "semantic", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities"
]
dependencies = [
  "rich>=13.7.1",
  "orjson>=3.10.7",
  "regex>=2024.5.15",
  "pathspec>=0.12.1",
  "click>=8.1.7",
  "pydantic>=2.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage[toml]",
  "hypothesis",
  "mypy",
  "ruff",
  "black",
  "pygments",
  "pytest-benchmark",
  "mkdocs-material"
]

[project.urls]
Homepage = "https://github.com/your-org/pysearch"
Documentation = "https://github.com/your-org/pysearch#readme"
Changelog = "https://github.com/your-org/pysearch/blob/main/CHANGELOG.md"
Issues = "https://github.com/your-org/pysearch/issues"

[project.scripts]
pysearch = "pysearch.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pysearch"]
package-data = { pysearch = ["py.typed"] }

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=pysearch --cov-config=pyproject.toml --cov-report=term-missing:skip-covered --cov-report=xml:coverage.xml"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/pysearch"]
data_file = ".coverage/coverage"

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
fail_under = 85

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E266", "E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true
exclude = [
  "build",
  "dist",
  "sdist",
  "tests/.*_data",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
line-ending = "lf"

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["pysearch"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.bandit]
skips = ["B101"]
