[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-web-app"
version = "0.2.0"
description = "A sample web application for testing pysearch"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Test Author", email = "test@example.com" }]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.setuptools]
package-dir = {"" = "src"}
